@@ -7,6 +7,8 @@ Version 2.4.0mtn:
 	* Added google plugin for "I'm Feeling Lucky" searches.
 	* Fixed aspell dependency in switchspell (fixes gentoo bug #196693)
 	* Added nodashi's manualsize plugin
+	* Made switchspell work with gtkspell that uses enchant using
+	--enable-enchant option to ./configure
 
 Version 2.3.0: 03/17/08
 	* Fixed a typo in irc-more's source that allowed a potential double-free
